attached_assets/Pasted--Configuring-done-0-1s-Generating-done-0-1s-Build-files-have-been-written-to-home-ru-1734981877666.txt
-- Configuring done (0.1s)
-- Generating done (0.1s)
-- Build files have been written to: /home/runner/StreamCryptoDFS/build
[  9%] Built target dfs_crypto
[ 19%] Built target dfs_store
[ 23%] Building CXX object CMakeFiles/dfs_network.dir/src/network/codec.cpp.o
/home/runner/StreamCryptoDFS/src/network/codec.cpp: In member function ‘std::size_t dfs::network::Codec::serialize(const dfs::network::MessageFrame&, std::ostream&)’:
/home/runner/StreamCryptoDFS/src/network/codec.cpp:18:29: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   18 |         write_bytes(output, frame.initialization_vector.data(), frame.initialization_vector.size());
      |                             ^~~~~
In file included from /home/runner/StreamCryptoDFS/src/network/codec.cpp:1:
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:18:65: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   18 |         write_bytes(output, frame.initialization_vector.data(), frame.initialization_vector.size());
      |                                                                 ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:19:24: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   19 |         total_bytes += frame.initialization_vector.size();
      |                        ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:22:30: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   22 |         write_bytes(output, &frame.message_type, sizeof(MessageType));
      |                              ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:22:57: error: ‘MessageType’ was not declared in this scope; did you mean ‘MessageFrame’?
   22 |         write_bytes(output, &frame.message_type, sizeof(MessageType));
      |                                                         ^~~~~~~~~~~
      |                                                         MessageFrame
/home/runner/StreamCryptoDFS/src/network/codec.cpp:26:55: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   26 |         uint32_t network_source_id = to_network_order(frame.source_id);
      |                                                       ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:26:38: error: ‘to_network_order’ was not declared in this scope
   26 |         uint32_t network_source_id = to_network_order(frame.source_id);
      |                                      ^~~~~~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:31:61: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   31 |         uint32_t network_filename_length = to_network_order(frame.filename_length);
      |                                                             ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:36:58: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   36 |         uint64_t network_payload_size = to_network_order(frame.payload_size);
      |                                                          ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:41:13: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   41 |         if (frame.payload_size > 0 && frame.payload_stream) {
      |             ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:41:39: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   41 |         if (frame.payload_size > 0 && frame.payload_stream) {
      |                                       ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:43:37: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   43 |             std::size_t remaining = frame.payload_size;
      |                                     ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:45:37: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   45 |             while (remaining > 0 && frame.payload_stream->good()) {
      |                                     ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:47:17: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   47 |                 frame.payload_stream->read(buffer, chunk_size);
      |                 ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:48:42: error: invalid use of incomplete type ‘const struct dfs::network::MessageFrame’
   48 |                 std::size_t bytes_read = frame.payload_stream->gcount();
      |                                          ^~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:13:8: note: forward declaration of ‘struct dfs::network::MessageFrame’
   13 | struct MessageFrame;
      |        ^~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp: At global scope:
/home/runner/StreamCryptoDFS/src/network/codec.cpp:72:70: error: return type ‘struct dfs::network::MessageFrame’ is incomplete
   72 | MessageFrame Codec::deserialize(std::istream& input, Channel& channel) {
      |                                                                      ^
/home/runner/StreamCryptoDFS/src/network/codec.cpp: In member function ‘void dfs::network::Codec::deserialize(std::istream&, dfs::network::Channel&)’:
/home/runner/StreamCryptoDFS/src/network/codec.cpp:77:18: error: aggregate ‘dfs::network::MessageFrame frame’ has incomplete type and cannot be defined
   77 |     MessageFrame frame;
      |                  ^~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:83:55: error: ‘MessageType’ was not declared in this scope; did you mean ‘MessageFrame’?
   83 |         read_bytes(input, &frame.message_type, sizeof(MessageType));
      |                                                       ^~~~~~~~~~~
      |                                                       MessageFrame
/home/runner/StreamCryptoDFS/src/network/codec.cpp:88:27: error: ‘from_network_order’ was not declared in this scope
   88 |         frame.source_id = from_network_order(network_source_id);
      |                           ^~~~~~~~~~~~~~~~~~
/home/runner/StreamCryptoDFS/src/network/codec.cpp:103:13: error: invalid use of incomplete type ‘class dfs::network::Channel’
  103 |             channel.produce(frame);
      |             ^~~~~~~
/home/runner/StreamCryptoDFS/include/network/codec.hpp:12:7: note: forward declaration of ‘class dfs::network::Channel’
   12 | class Channel;
      |       ^~~~~~~
make[2]: *** [CMakeFiles/dfs_network.dir/build.make:104: CMakeFiles/dfs_network.dir/src/network/codec.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:151: CMakeFiles/dfs_network.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
